// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Dialog /> render: dialog role [no title] 1`] = `
<div
  aria-modal="true"
  class="dialogScreen"
  role="dialog"
  tabindex="-1"
>
  <div
    class="dialog regular"
  >
    <button
      aria-label="close dialog"
      class="exitButton"
    >
      X
    </button>
    <div
      class="header"
    />
    <div
      class="content"
    />
  </div>
</div>
`;

exports[`<Dialog /> render: dialog role [with title] 1`] = `
<div
  aria-labelledby="dialog-title-«r0»"
  aria-modal="true"
  class="dialogScreen"
  role="dialog"
  tabindex="-1"
>
  <div
    class="dialog regular"
  >
    <button
      aria-label="close dialog"
      class="exitButton"
    >
      X
    </button>
    <div
      class="header"
    >
      <h2
        class="title"
        id="dialog-title-«r0»"
      >
        Test Dialog
      </h2>
    </div>
    <div
      class="content"
    />
  </div>
</div>
`;
